[gd_scene load_steps=10 format=3 uid="uid://cstwqshp2173q"]

[ext_resource type="Script" path="res://scripts/main_game.gd" id="1_3vdku"]
[ext_resource type="Texture2D" uid="uid://frh3npavxmt" path="res://assets/stage.png" id="2_f1ivp"]
[ext_resource type="PackedScene" uid="uid://2ljyt8xji5c0" path="res://jester_with_lute.tscn" id="3_jbpol"]
[ext_resource type="PackedScene" uid="uid://hk4cy6mix1yk" path="res://main_menu.tscn" id="3_r2ja2"]
[ext_resource type="PackedScene" uid="uid://crtr3d3vfuj2y" path="res://King/King.tscn" id="5_51e3k"]
[ext_resource type="PackedScene" uid="uid://dmwr76y7a7yrg" path="res://juggle.tscn" id="6_blokk"]
[ext_resource type="Theme" uid="uid://dgl6858a3fmae" path="res://new_theme.tres" id="7_oqrmx"]
[ext_resource type="Script" path="res://hud.gd" id="7_q6mi8"]
[ext_resource type="PackedScene" uid="uid://sq5r1e4inoro" path="res://Jester/Jester.tscn" id="9_rcqca"]

[node name="MainGame" type="Node2D"]
script = ExtResource("1_3vdku")

[node name="Stage" type="Node2D" parent="."]

[node name="Sprite2d" type="Sprite2D" parent="Stage"]
position = Vector2(577, 326)
texture = ExtResource("2_f1ivp")

[node name="MainMenu" parent="." instance=ExtResource("3_r2ja2")]

[node name="with_lute" parent="." node_paths=PackedStringArray("hud") instance=ExtResource("3_jbpol")]
visible = false
hud = NodePath("../hud")

[node name="King" parent="." instance=ExtResource("5_51e3k")]
position = Vector2(-2, 31)

[node name="Jester" parent="." instance=ExtResource("9_rcqca")]
position = Vector2(648, 248)

[node name="juggle" parent="." node_paths=PackedStringArray("hud") instance=ExtResource("6_blokk")]
visible = false
hud = NodePath("../hud")

[node name="hud" type="CanvasLayer" parent="." node_paths=PackedStringArray("king", "jester")]
script = ExtResource("7_q6mi8")
king = NodePath("../King")
jester = NodePath("../Jester")

[node name="Control" type="Control" parent="hud"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="hud/Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -196.0
offset_right = 216.0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="PanelContainer" type="PanelContainer" parent="hud/Control/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="hud/Control/MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="hud/Control/MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="StreakLabel" type="Label" parent="hud/Control/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("7_oqrmx")
text = "Streak: -"

[node name="PercentLabel" type="Label" parent="hud/Control/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "--%"
horizontal_alignment = 1

[node name="BestLabel" type="Label" parent="hud/Control/MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
